--- a/test/fixtures/submissions.yml
+++ b/test/fixtures/submissions.yml
@@ -45,4 +45,4 @@ sub_deposited:
     funders: '["Department of Energy (DOE)"]'
     user: one
     uuid: 7648b505-af79-4a2b-abcb-2727f716100c
-    status: 'deposited'
+    status: 'approved'
